--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="addTask()"></button>
+                <button onclick="addTask()">Add</button>
 
             </div>
 
